# embedded-wasm-uart-rp2350

./: Cargo.toml  README.md  TUTORIAL.md  build.rs
.cargo/: config.toml
src/: main.rs  platform.rs  uart.rs
wasm-app/: Cargo.toml
wasm-app/src/: lib.rs
wasm-tests/: Cargo.toml  build.rs
wasm-tests/tests/: integration.rs
wit/: world.wit
