[package]
edition = "2024"
name = "wasm_app"
version = "0.1.0"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { version = "0.54", default-features = false, features = [
    "macros",
    "realloc",
] }
dlmalloc = { version = "0.2", features = ["global"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
